pkg/synthesis/tests_expected_output/k8s_resources/ExampleDumbeldore_true_0/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = DumbledoreAll) to (*)
        nsx-id: "1925"
    creationTimestamp: null
    name: policy_0
spec:
    egress:
        - to:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: group__DumbledoreAll
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = DumbledoreNoSly) to (group != Slytherin)
        nsx-id: "9196"
    creationTimestamp: null
    name: policy_1
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: group__DumbledoreNoSly
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = DumbledoreAll) to (*)
        nsx-id: "1925"
    creationTimestamp: null
    name: policy_2
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__DumbledoreAll
                      operator: Exists
    podSelector: {}
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = DumbledoreNoSly) to (group != Slytherin)
        nsx-id: "9196"
    creationTimestamp: null
    name: policy_3
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__DumbledoreNoSly
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Slytherin
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: noNsxID
    creationTimestamp: null
    name: defaultDeny
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
